<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" android:gravity="center" xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
	    android:layout_width="180dip"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dip"
        android:scrollbarStyle="insideOverlay">
    <LinearLayout
        android:layout_width="180dip"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
	        <!-- Barter  -->	
	        <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_barter"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/barter_stat"
	                android:text="@string/Barter"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/barter_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
	        <!-- Big guns -->
	        
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_big_guns"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/big_guns_stat"
	                android:text="@string/Big_Guns"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/big_guns_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Energy Weapons -->
	        
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_energy"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/energy_stat"
	                android:text="@string/Energy_Weapons"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/energy_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Explosives -->
	        
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_explosives"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/explosives_stat"
	                android:text="@string/Explosives"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/explosives_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Lockpick -->
	        
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_lockpick"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/lockpick_stat"
	                android:text="@string/Lockpick"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/lockpick_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Medicine -->
	        
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_medicine"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/medicine_stat"
	                android:text="@string/Medicine"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/medicine_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Melee -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_melee"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/melee_stat"
	                android:text="@string/Melee"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/melee_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Repair -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_repair"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/repair_stat"
	                android:text="@string/Repair"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/repair_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
					<!-- Luck -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_science"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/science_stat"
	                android:text="@string/Science"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/science_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Small Guns -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_small_guns"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/small_guns_stat"
	                android:text="@string/Small_Guns"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/small_guns_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Sneak -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_sneak"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/sneak_stat"
	                android:text="@string/Sneak"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/sneak_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Speech -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_speech"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/speech_stat"
	                android:text="@string/Speech"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/speech_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
	        
			<!-- Unarmed -->
			
			<RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/text_unarmed"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_toLeftOf="@+id/unarmed_stat"
	                android:text="@string/Unarmed"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	
	            <TextView
	                android:id="@+id/unarmed_stat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="0"
	                android:textColor="#aaffaa"
	                android:textSize="24dip"/>
	        </RelativeLayout>
        
    </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/skills_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:padding="5dip"
        android:src="@drawable/barter" />

</LinearLayout>